examples/json/tests/data/escape.diag
error: invalid escape sequence
  ┌─ <input>:2:14
  │
2 │   "foo": "äää\x"
  │              ^^

